# crewAI

./: .env.test  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml
.github/: CONTRIBUTING.md  security.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  generate-tool-specs.yml  nightly.yml  pr-size.yml  publish.yml  tests.yml
docs/: docs.json  enterprise-api.base.yaml  enterprise-api.ko.yaml  enterprise-api.pt-BR.yaml  index.mdx
docs/ar/: changelog.mdx  index.mdx  installation.mdx  introduction.mdx  quickstart.mdx  telemetry.mdx
docs/ar/api-reference/: introduction.mdx
docs/ar/concepts/: agents.mdx  cli.mdx  collaboration.mdx  crews.mdx  event-listener.mdx  files.mdx  flows.mdx  knowledge.mdx  llms.mdx  memory.mdx  planning.mdx  processes.mdx  tasks.mdx  (+6 more)
docs/en/: changelog.mdx  index.mdx  installation.mdx  introduction.mdx  quickstart.mdx  telemetry.mdx
docs/ko/: changelog.mdx  index.mdx  installation.mdx  introduction.mdx  quickstart.mdx  telemetry.mdx
docs/pt-BR/: changelog.mdx  index.mdx  installation.mdx  introduction.mdx  quickstart.mdx  telemetry.mdx
lib/crewai/: pyproject.toml
lib/crewai-files/: README.md
lib/crewai-tools/: README.md
lib/devtools/: README.md  pyproject.toml
lib/devtools/src/localagents_devtools/: __init__.py  cli.py  docs_check.py  prompts.py
lib/localagents/: README.md  pyproject.toml
lib/localagents-files/: README.md  pyproject.toml
lib/localagents-tools/: README.md  pyproject.toml  tool.specs.json
(+2029 files in other folders)
