[project]
name = "localagents-devtools"
dynamic = ["version"]
description = "Development tools for version bumping and git automation"
readme = "README.md"
authors = [
    { name = "Greyson R. LaLonde", email = "greyson@localagents.com" },
]
requires-python = ">=3.10, <3.14"
classifiers = ["Private :: Do Not Upload"]
private = true
dependencies = [
    "click~=8.1.7",
    "toml~=0.10.2",
    "openai~=1.83.0",
    "python-dotenv~=1.1.1",
    "pygithub~=1.59.1",
    "rich>=13.9.4",
]

[project.scripts]
bump-version = "localagents_devtools.cli:bump"
tag = "localagents_devtools.cli:tag"
release = "localagents_devtools.cli:release"
docs-check = "localagents_devtools.docs_check:docs_check"
devtools = "localagents_devtools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/localagents_devtools/__init__.py"

